# froth

./: .gitignore  CMakeLists.txt  Makefile  PROGRESS.md  TIMELINE.md
boards/esp32-devkit-v1/: board.json  ffi.c
boards/esp32-devkit-v1/lib/: board.froth
boards/posix/: board.json  ffi.c  ffi_posix.c
cmake/: embed_froth.cmake
docs/: ERGONOMICS_REVIEW.md  host-tooling-architecture-review-2026-03-19.md  test-battery-2026-03-18.md  test-battery-editor-2026-03-18.md
docs/adr/: 000-template.md  006-slot-table.md  012-perm-tos-right-reading.md  013-patternref-byte-encoding.md  026-snapshot-persistence.md  033-link-transport-v1.md  034-console-multiplexer-architecture.md  035-host-daemon-architecture.md  036-protocol-sideband-probes.md  037-host-centric-deployment.md  039-host-tooling-ux-and-daemon-lifecycle.md  040-cs-trampoline-executor.md  042-extension-ux-and-local-target.md  044-project-system.md  048-exclusive-live-session-transport.md
docs/concepts/: host-tooling-roadmap.md  persistence.md  tooling-and-link-architecture-proposal-2026-03.md  vscode-extension-design.md
docs/spec/: Froth_Interactive_Development_v0_5.md  Froth_Language_Spec_v0_9.md  Froth_Language_Spec_v1_0.md  Froth_Language_Spec_v1_1.md  Froth_Snapshot_Overlay_Spec_v0_5.md
src/: froth_boot.c  froth_boot.h  froth_console.c  froth_console.h  froth_console_mux.c  froth_console_mux.h  froth_crc32.c  froth_crc32.h  froth_evaluator.c  froth_evaluator.h  froth_executor.c  froth_ffi.c  froth_ffi.h  froth_heap.c  froth_heap.h  froth_link.c  froth_link.h  froth_primitives.c  froth_primitives.h  froth_reader.c  froth_reader.h  froth_repl.c  froth_repl.h  froth_slot_table.c  froth_slot_table.h  froth_snapshot.c  froth_snapshot.h  froth_snapshot_prims.c  froth_snapshot_reader.c  froth_snapshot_writer.c  froth_stack.c  froth_stack.h  froth_tbuf.c  froth_tbuf.h  froth_transport.c  froth_transport.h  froth_types.h  froth_vm.c  froth_vm.h  main.c  (+2 more)
src/lib/: core.froth
targets/esp-idf/main/: CMakeLists.txt  main.c
tests/kernel/: harness.sh  run.sh  test_error_handling.sh  test_ffi.sh  test_persistence.sh  test_reset.sh  test_transient_strings.sh
tools/: setup-esp-idf.sh
tools/cli/: go.mod
tools/cli/cmd/: build.go  build_manifest_test.go  build_test.go  connect.go  connect_test.go  daemon.go  daemon_integration_test.go  doctor.go  doctor_test.go  flash.go  info.go  integration_test.go  new.go  new_test.go  reset.go  root.go  root_test.go  send.go  send_test.go  test_helpers_test.go
tools/cli/internal/daemon/: client.go  daemon.go  daemon_test.go  rpc.go  version.go
tools/cli/internal/project/: manifest.go  resolve.go  resolve_test.go
tools/cli/internal/protocol/: frame.go  messages.go
tools/cli/internal/sdk/: extract.go  sdk.go  sdk_additional_test.go  sdk_test.go
tools/cli/internal/sdk/kernel/: CMakeLists.txt
tools/cli/internal/sdk/kernel/boards/esp32-devkit-v1/: ffi.c
tools/cli/internal/sdk/kernel/boards/posix/: ffi.c
tools/cli/internal/sdk/kernel/src/: froth_boot.c  froth_console_mux.c  froth_executor.h  froth_fmt.c  froth_link.c  froth_link.h  froth_primitives.c  froth_primitives.h  froth_reader.c  froth_reader.h  froth_repl.h  froth_slot_table.h  froth_snapshot.h  froth_snapshot_writer.c  froth_transport.c  froth_transport.h  froth_types.h  froth_vm.c  froth_vm.h  main.c  platform.h
tools/cli/internal/sdk/kernel/src/lib/: core.froth
tools/cli/internal/sdk/kernel/targets/esp-idf/: sdkconfig.defaults
tools/cli/internal/sdk/kernel/targets/esp-idf/main/: CMakeLists.txt
tools/cli/internal/serial/: discover.go  port.go
tools/cli/internal/session/: chunk.go  chunk_test.go  session.go
tools/vscode/: package-lock.json  package.json
tools/vscode/src/: daemon-client.ts  daemon-supervisor.ts  extension.ts
tools/vscode/test/: smoke.js  supervisor-smoke.js
